# Leeway

./: .gitignore  LICENSE  README.md  pyproject.toml
.agenttree/skills/code-review/: SKILL.md  checklist.md
.agenttree/skills/coding-standards/: SKILL.md  python.md
.agenttree/workflows/: project-kickoff.yaml
.leeway/skills/code-review/: SKILL.md
.leeway/skills/coding-standards/: SKILL.md
.leeway/skills/security-audit/: SKILL.md
.leeway/workflows/: code-health.yaml  project-kickoff.yaml
docs/: commands.md  hooks.md  mcp.md  permissions.md  plugins.md  scheduling.md  skills.md  tools.md  workflows.md
examples/workflows/: explore_codebase.yaml
frontend/terminal/: package-lock.json  package.json
frontend/terminal/src/: App.tsx  (+1 more)
src/agenttree/: __init__.py  __main__.py  cli.py
src/leeway/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/test_agents/: test_spawner.py
tests/test_cron/: test_scheduler.py  test_store.py
tests/test_engine/: test_messages.py
tests/test_hooks/: test_executor.py  test_registry.py
tests/test_mcp/: test_adapter.py
tests/test_memory/: test_store.py
tests/test_permissions/: test_checker.py
tests/test_plugins/: test_loader.py
tests/test_skills/: test_registry.py  test_skill_tool.py
tests/test_tasks/: test_manager.py  test_store.py
tests/test_tools/: test_base.py  test_web_search_tool.py
tests/test_triggers/: test_registry.py
tests/test_workflow/: test_engine_parallel.py  test_evaluator.py  test_graph.py  test_hitl.py  test_node_scoping.py  test_parallel.py  test_types.py  test_validation.py
(+183 files in other folders)
