[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttree"
version = "0.1.0"
description = "A workflow-driven AI agent framework - run LLMs through YAML-defined decision trees"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
agenttree = "agenttree.cli:app"
at = "agenttree.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
